infra/kubernetes-manifests/05-task-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: crm
  labels:
    app: task-service
spec:
  type: ClusterIP
  selector:
    app: task-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: crm
  labels:
    app: task-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: ghcr.io/ylhan237/task-service:latest
          ports:
            - containerPort: 8084
          readinessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 90
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 768Mi
