infra/kubernetes-manifests/07-event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: crm
  labels:
    app: event-service
spec:
  type: ClusterIP
  selector:
    app: event-service
  ports:
    - name: http
      port: 8089
      targetPort: 8089
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: crm
  labels:
    app: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: ghcr.io/ylhan237/event-service:latest
          ports:
            - containerPort: 8089
          readinessProbe:
            tcpSocket:
              port: 8089
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8089
            initialDelaySeconds: 90
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
